一些学习的demo

--- a/webjs/index.html
+++ b/webjs/index.html
@@ -1,10 +1,53 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-Hello World!
-</body>
-</html>
+<h3><a href="">全部课程</a></h3>
+<div id="left_nav_id" class="left_nav">
+    <div onmouseover="tryOnMouseover('dl0')" onmouseout="tryOnMouseout('dl0')" class="category-list first">
+        <dl class="fath">
+            <dt><a>内容1</a></dt>
+            <dd><a href="110.html" target="_blank">课件110</a></dd>
+            <dd><a href="111.html" target="_blank">课件111</a></dd>
+            <dd><a href="112.html" target="_blank">课件112</a></dd>
+        </dl>
+        <div id="dl0" class="main-category">
+            <dl>
+                <dt>子内容1</dt>
+                <dd><a href="110.html" target="_blank">课件110</a><a href="111.html" target="_blank">课件111</a><a
+                        href="112.html" target="_blank">课件112</a></dd>
+            </dl>
+            <dl>
+                <dt>子内容2</dt>
+                <dd><a href="210.html" target="_blank">课件210</a><a href="211.html" target="_blank">课件211</a><a
+                        href="212.html" target="_blank">课件212</a></dd>
+            </dl>
+        </div>
+    </div>
+    <div onmouseover="tryOnMouseover('dl1')" onmouseout="tryOnMouseout('dl1')" class="category-list">
+        <dl class="fath">
+            <dt><a>内容2</a></dt>
+            <dd><a href="210.html" target="_blank">课件210</a></dd>
+            <dd><a href="211.html" target="_blank">课件211</a></dd>
+            <dd><a href="212.html" target="_blank">课件212</a></dd>
+        </dl>
+        <div id="dl1" class="main-category">
+            <dl>
+                <dt>子内容1</dt>
+                <dd><a href="210.html" target="_blank">课件210</a><a href="211.html" target="_blank">课件211</a><a
+                        href="212.html" target="_blank">课件212</a></dd>
+            </dl>
+        </div>
+    </div>
+    <div onmouseover="tryOnMouseover('dl2')" onmouseout="tryOnMouseout('dl2')" class="category-list">
+        <dl class="fath">
+            <dt><a>内容3</a></dt>
+            <dd><a href="310.html" target="_blank">课件310</a></dd>
+            <dd><a href="311.html" target="_blank">课件311</a></dd>
+            <dd><a href="312.html" target="_blank">课件312</a></dd>
+        </dl>
+        <div id="dl2" class="main-category">
+            <dl>
+                <dt>子内容4</dt>
+                <dd><a href="310.html" target="_blank">课件310</a><a href="311.html" target="_blank">课件311</a><a
+                        href="312.html" target="_blank">课件312</a></dd>
+            </dl>
+        </div>
+    </div>
+</div>
