--- a/JavaScriptStudy/index.html
+++ b/JavaScriptStudy/index.html
@@ -23,6 +23,11 @@ console.log(numArray.every(checkItem))
 numArray.forEach(chaneArray);
 console.log(numArray.reduce(sum));
 console.log(numArray.reduceRight(sum));
+var color = "red";
+function sayColor(){
+	console.log(window.color);
+}
+window.sayColor();
 	 </script>
 	 </body>
 </html>
